Fix alignment of ol, ul list items in event descriptions

--- a/static_files/assets/scss/_views-frontend.scss
+++ b/static_files/assets/scss/_views-frontend.scss
@@ -552,6 +552,11 @@ ul.event-list-condensed {
     @include respond-to(xs) {
       font-size: 14px;
     }
+
+    ol,
+    ul {
+      padding-left: 25px;
+    }
   }
 
   .event-single-schedule-header {
